<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.login.LoginFragment"
    android:fitsSystemWindows="true">

    <data>
        <variable
            name="viewModel"
            type="org.goodkarmaprojects.feature.login.presentation.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/wavy_logo"
            app:layout_constraintBottom_toTopOf="@id/byGkpText"
            app:layout_constraintEnd_toEndOf="@id/byGkpText"
            app:layout_constraintStart_toStartOf="@id/byGkpText"
            app:layout_constraintTop_toTopOf="@id/guide15h" />

        <TextView
            android:id="@+id/byGkpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-thin"
            android:text="@string/byGoodKarmaProjects"
            android:textColor="@color/light_grey"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/guide35h"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/LoginInputText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="0dp"
            app:layout_constraintEnd_toEndOf="@id/guide85v"
            app:layout_constraintStart_toStartOf="@id/guide15v"
            app:layout_constraintTop_toTopOf="@id/guide42h">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_edt"
                style="@style/LoginInputTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/email"
                android:text="@={viewModel.email}"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="32dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/LoginInputText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/guide85v"
            app:layout_constraintStart_toStartOf="@id/guide15v"
            app:layout_constraintTop_toBottomOf="@id/emailInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_pass_edt"
                style="@style/LoginInputTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                android:maxLines="1"
                android:paddingStart="32dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgottenPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/forgottenPassword"
            android:textColor="@color/light_grey"
            app:layout_constraintEnd_toEndOf="@id/guide85v"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#1AFFFFFF"
            android:ellipsize="end"
            android:fontFamily="sans-serif-light"
            android:maxLines="2"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="@id/guide85v"
            app:layout_constraintStart_toStartOf="@id/guide15v"
            app:layout_constraintTop_toBottomOf="@id/forgottenPasswordText"
            app:strokeWidth="0dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/guide95h"
            app:layout_constraintEnd_toEndOf="@id/guide85v"
            app:layout_constraintStart_toStartOf="@id/guide15v"
            app:layout_constraintTop_toTopOf="@id/guide95h">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/doNotHaveAccount"
                android:textColor="@color/light_grey" />

            <TextView
                android:id="@+id/registerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/register"
                android:textColor="@color/secondary"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide15h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide35h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide42h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".42" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide95h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide15v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide85v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".90" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>